unpackaged/main/default/objects/EventApi__Ticket_Type__c/EventApi__Ticket_Type__c.object-meta.xml
<CustomObject>
    <description>Tracks the various types of Tickets available for a Event.</description>
    <label>Ticket Type</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ticket Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>