unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Cost__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Cost__c</fullName>
    <description>The cost of the Ticket Type will be used to calculate the Tax-deductible donation amount that displays to on the Attendees receipt if &quot;Is Tax Deductible&quot; is checked.</description>
    <inlineHelpText>The cost of the Ticket Type will be used to calculate the Tax-deductible donation amount that displays to on the Attendees receipt if &quot;Is Tax Deductible&quot; is checked.</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>