unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Deferred_Revenue_Term__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Deferred_Revenue_Term__c</fullName>
    <label>Deferred Revenue Term (In Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>