unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Description__c</fullName>
    <description>Displays with the ticket type on the registration page.</description>
    <inlineHelpText>Displays with the ticket type on the registration page.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>