unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Discount_Account__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Discount_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account to debit when discounting a sale related to the Item.</description>
    <inlineHelpText>The account to debit when discounting a sale related to the Item.</inlineHelpText>
    <label>RESERVED</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Ticket Types (Discount Account)</relationshipLabel>
    <relationshipName>Discount_Account_Ticket_Types</relationshipName>
    <type>Lookup</type>
</CustomField>