unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Display_Available_Inventory__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Display_Available_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, if a ticket quantity is specified, the number of tickets remaining will be shown next to the ticket type.</description>
    <inlineHelpText>When checked, if a ticket quantity is specified, the number of tickets remaining will be shown next to the ticket type.</inlineHelpText>
    <label>Display Available Inventory</label>
    <type>Checkbox</type>
</CustomField>