unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Early_Bird_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Early_Bird_End_Date__c</fullName>
    <description>Requires &quot;Enable Early Bird Price&quot; to be checked. Specifies the date that early bird pricing ends.</description>
    <inlineHelpText>Requires &quot;Enable Early Bird Price&quot; to be checked. Specifies the date that early bird pricing ends.</inlineHelpText>
    <label>Early Bird End Date</label>
    <type>Date</type>
</CustomField>