unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Early_Bird_Price__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Early_Bird_Price__c</fullName>
    <description>Requires &quot;Enable Early Bird Price&quot; to be checked. Specifies the date that early bird pricing ends.</description>
    <inlineHelpText>Requires &quot;Enable Early Bird Price&quot; to be checked. Specifies the date that early bird pricing ends..</inlineHelpText>
    <label>Early Bird Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>