unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Enable_Early_Bird_Price__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Early_Bird_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Ticket Type will be sold for the amount defined in the &quot;Early Bird Price&quot; field until the date defined in the &quot;Early Bird End Date&quot;.</description>
    <inlineHelpText>When checked, the Ticket Type will be sold for the amount defined in the &quot;Early Bird Price&quot; field until the date defined in the &quot;Early Bird End Date&quot;.</inlineHelpText>
    <label>Enable Early Bird Price</label>
    <type>Checkbox</type>
</CustomField>