unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Enable_Onsite_Price__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Onsite_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the ticket type can be sold for a different price, defined in the &quot;On-Site Price&quot; field, on the day of the event.</description>
    <inlineHelpText>When checked, the ticket type can be sold for a different price, defined in the &quot;On-Site Price&quot; field, on the day of the event.</inlineHelpText>
    <label>Enable On-site Price</label>
    <type>Checkbox</type>
</CustomField>