unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Enable_Refund_Request__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Refund_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, an attendee can request a refund and the attendee record will be updated to indicate he/she has cancelled.</description>
    <inlineHelpText>When checked, an attendee can request a refund and the attendee record will be updated to indicate he/she has cancelled.</inlineHelpText>
    <label>Enable Refund Request</label>
    <type>Checkbox</type>
</CustomField>