unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Enable_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Waitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, attendees will have the option to be added to a waitlist for this ticket type when it is sold out.</description>
    <inlineHelpText>When checked, attendees will have the option to be added to a waitlist for this ticket type when it is sold out.</inlineHelpText>
    <label>Enable Waitlist</label>
    <type>Checkbox</type>
</CustomField>