unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Event.</description>
    <inlineHelpText>Link to related Event.</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Ticket Types</relationshipLabel>
    <relationshipName>Ticket_Types</relationshipName>
    <type>Lookup</type>
</CustomField>