unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Form__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to a form created in the &quot;Form Builder&quot; app. Customers will see the form when they select the ticket type.</description>
    <inlineHelpText>Link to a form created in the &quot;Form Builder&quot; app. Customers will see the form when they select the ticket type.</inlineHelpText>
    <label>Ticket Type Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipLabel>Ticket Types</relationshipLabel>
    <relationshipName>Ticket_Types</relationshipName>
    <type>Lookup</type>
</CustomField>