unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Group_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Group_Type__c</fullName>
    <description>The value of this field will be matched to the related item&#39;s &quot;Item Weight UOM&quot; field.</description>
    <inlineHelpText>The value of this field will be matched to the related item&#39;s &quot;Item Weight UOM&quot; field.</inlineHelpText>
    <label>Group Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>