unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Income_Account__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Income_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The credit account to use when posting revenue in a A/R transaction or from a cash sale receipt.</description>
    <inlineHelpText>The credit account to use when posting revenue in a A/R transaction or from a cash sale receipt.</inlineHelpText>
    <label>Income Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Ticket Types</relationshipLabel>
    <relationshipName>Ticket_Types</relationshipName>
    <type>Lookup</type>
</CustomField>