unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Interview_Form_Display_Label__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Interview_Form_Display_Label__c</fullName>
    <description>Text heading for the ticket type form.</description>
    <inlineHelpText>Text heading for the ticket type form.</inlineHelpText>
    <label>Form Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>