unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Inventory_Status__c</fullName>
    <description>** System Calculated ** The current inventory status. Default is &quot;In-stock&quot;.</description>
    <inlineHelpText>** System Calculated ** The current inventory status. Default is &quot;In-stock&quot;.</inlineHelpText>
    <label>RESERVED</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-stock</fullName>
                <default>true</default>
                <label>In-stock</label>
            </value>
            <value>
                <fullName>Sold Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>