unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, ticket is available for sale but must still be published to be visible on the registration page.</description>
    <inlineHelpText>When checked, ticket is available for sale but must still be published to be visible on the registration page.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>