unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Is_Group_Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Group_Ticket_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the ability to assign multiple attendees to a single ticket will be enabled.</description>
    <inlineHelpText>When checked, the ability to assign multiple attendees to a single ticket will be enabled.</inlineHelpText>
    <label>Is Group Ticket Type</label>
    <type>Checkbox</type>
</CustomField>