unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, ticket is visible and available for purchase on the registration page to contacts with access permissions.</description>
    <inlineHelpText>When checked, ticket is visible and available for purchase on the registration page to contacts with access permissions.</inlineHelpText>
    <label>Is Published</label>
    <type>Checkbox</type>
</CustomField>