unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Is_Tax_Deductible__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Tax_Deductible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Ticket Type is considered as a Tax Deductible contribution and the Cost of the Ticket Type will be used when deriving the &quot;Tax Deductible Donation Amount&quot; on Attendee&#39;s Receipts. Defaults unchecked.</description>
    <inlineHelpText>When checked, the Ticket Type is considered as a Tax Deductible contribution and the Cost of the Ticket Type will be used when deriving the &quot;Tax Deductible Donation Amount&quot; on Attendee&#39;s Receipts. Defaults unchecked.</inlineHelpText>
    <label>Is Tax Deductible</label>
    <type>Checkbox</type>
</CustomField>