unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Is_Taxable__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated Override ** Enable tax specific controls and features for this ticket.</description>
    <inlineHelpText>** System Calculated Override ** Enable tax specific controls and features for this ticket.</inlineHelpText>
    <label>Is Taxable</label>
    <type>Checkbox</type>
</CustomField>