unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SYSTEM</description>
    <inlineHelpText>SYSTEM</inlineHelpText>
    <label>SYSTEM</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>SYSTEM</relationshipLabel>
    <relationshipName>Ticket_Types</relationshipName>
    <type>Lookup</type>
</CustomField>