unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Item_Class__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SYSTEM</description>
    <inlineHelpText>SYSTEM</inlineHelpText>
    <label>SYSTEM</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Ticket Types</relationshipLabel>
    <relationshipName>Ticket_Types</relationshipName>
    <type>Lookup</type>
</CustomField>