unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Item_Cost__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Item_Cost__c</fullName>
    <description>The cost per unit for the item.</description>
    <inlineHelpText>The cost per unit for the item.</inlineHelpText>
    <label>Item Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>