unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Manage_Agenda_by_Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Manage_Agenda_by_Ticket_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field will allow staff users to manage scheduled items by ticket type. The settings from the session will be overridden with the settings defined on the Ticket Type Scheduled Item.</description>
    <inlineHelpText>Checking this field will allow staff users to manage scheduled items by ticket type. The settings from the session will be overridden with the settings defined on the Ticket Type Scheduled Item.</inlineHelpText>
    <label>Manage Agenda by Ticket Type</label>
    <type>Checkbox</type>
</CustomField>