unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Maximum_Number_of_Assignments__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Maximum_Number_of_Assignments__c</fullName>
    <description>**Conditionally Required** Defines the maximum number of attendees allowed per group. Field is required when &quot;Is Group Ticket Type&quot; field is set to true.</description>
    <inlineHelpText>** Conditionally Required ** If &quot;Restrict Number of Assignments&quot; is checked, a maximum number of assignments must be defined.</inlineHelpText>
    <label>Maximum Attendees Allowed Per Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>