unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Maximum_Sales_Quantity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Maximum_Sales_Quantity__c</fullName>
    <description>Requires &quot;Restrict Maximum Sales Quantity&quot; to be checked. Specifies the maximum quantity of tickets that can be purchased in a single order.</description>
    <inlineHelpText>Requires &quot;Restrict Maximum Sales Quantity&quot; to be checked. Specifies the maximum quantity of tickets that can be purchased in a single order.</inlineHelpText>
    <label>Maximum Sales Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>