unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Min_Sales_Quantity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Min_Sales_Quantity__c</fullName>
    <description>Specifies the minimum quantity of tickets that can be purchased in a single order.</description>
    <inlineHelpText>Specifies the minimum quantity of tickets that can be purchased in a single order.</inlineHelpText>
    <label>Minimum Sales Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>