unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Minimum_Sales_Quantity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Minimum_Sales_Quantity__c</fullName>
    <description>The minimum quantity allowed per sale. Required and restricted when &quot;Require a Minimum Sales Quantity&quot;</description>
    <inlineHelpText>The minimum quantity allowed per sale. Required and restricted when &quot;Require a Minimum Sales Quantity&quot;</inlineHelpText>
    <label>SYSTEM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>