unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Onsite_Price__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Onsite_Price__c</fullName>
    <description>Requires &quot;Enable On-Site Price&quot; to be checked. Specifies the ticket price on the day of the event.</description>
    <inlineHelpText>Requires &quot;Enable On-Site Price&quot; to be checked. Specifies the ticket price on the day of the event.</inlineHelpText>
    <label>On-site Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>