unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Price__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Price__c</fullName>
    <description>The standard or list price of the ticket.</description>
    <inlineHelpText>The standard or list price of the ticket.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>