unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Quantity_Available__c</fullName>
    <description>Maximum number of this ticket type that can be sold for the event. Required if &quot;Enable Waitlist&quot; is checked.</description>
    <inlineHelpText>Maximum number of this ticket type that can be sold for the event. Required if &quot;Enable Waitlist&quot; is checked.</inlineHelpText>
    <label>Ticket Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>