unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Quantity_Remaining__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Quantity_Remaining__c</fullName>
    <description>The ticket type quantity minus the tickets sold.</description>
    <formula>IF(EventApi__Quantity_Available__c &gt; EventApi__Quantity_Sold__c, EventApi__Quantity_Available__c - EventApi__Quantity_Sold__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The ticket type quantity minus the tickets sold.</inlineHelpText>
    <label>Tickets Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>