unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Refund_Request_Policy__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Refund_Request_Policy__c</fullName>
    <description>Enter rich text to display to the attendee when they request refunds from the Manage My Registration page.</description>
    <inlineHelpText>Enter rich text to display to the attendee when they request refunds from the Manage My Registration page.</inlineHelpText>
    <label>Refund Request Policy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>