unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Require_Assignments__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Require_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, a user will be unable to complete a sale for an Item until all assignments available have been entered. Defaults unchecked.</description>
    <inlineHelpText>When checked, a user will be unable to complete a sale for an Item until all assignments available have been entered. Defaults unchecked.</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>