unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Require_Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Require_Minimum_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Restrict customers to a maximum quantity required per sale. Defaults unchecked.</description>
    <inlineHelpText>Restrict customers to a minimum quantity required per sale. Defaults unchecked.</inlineHelpText>
    <label>Require Minimum Sales Quantity</label>
    <type>Checkbox</type>
</CustomField>