unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Restrict_Maximum_Sales_Quantity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Restrict_Maximum_Sales_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, restricts customers to a maximum quantity of tickets per order.</description>
    <inlineHelpText>When checked, restricts customers to a maximum quantity of tickets per order.</inlineHelpText>
    <label>Restrict Maximum Sales Quantity</label>
    <type>Checkbox</type>
</CustomField>