unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Ticket_Block__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Ticket Block used for inventory tracking purposes.</description>
    <inlineHelpText>Link to related Ticket Block used for inventory tracking purposes.</inlineHelpText>
    <label>Ticket Block</label>
    <referenceTo>EventApi__Ticket_Block__c</referenceTo>
    <relationshipLabel>Ticket Types</relationshipLabel>
    <relationshipName>Ticket_Types</relationshipName>
    <type>Lookup</type>
</CustomField>