unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__Ticket_Information__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Information__c</fullName>
    <description>Rich text to display to the attendee of any relevant event and ticket information.</description>
    <inlineHelpText>Rich text to display to the attendee of any relevant event and ticket information.</inlineHelpText>
    <label>Ticket Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>