unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/EventApi__UOM__c.field-meta.xml
<CustomField>
    <fullName>EventApi__UOM__c</fullName>
    <description>** Required ** Pick the unit of measure to display on registration pages.</description>
    <inlineHelpText>** Required ** Pick the unit of measure to display on registration pages.</inlineHelpText>
    <label>RESERVED</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Registration</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
                <label>Registration</label>
            </value>
            <value>
                <fullName>Ticket</fullName>
                <color>#78C953</color>
                <label>Ticket</label>
            </value>
            <value>
                <fullName>Seat</fullName>
                <color>#E27001</color>
                <label>Seat</label>
            </value>
            <value>
                <fullName>Table</fullName>
                <color>#A845DC</color>
                <label>Table</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <color>#F3D904</color>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>