unpackaged/main/default/objects/EventApi__Ticket_Type__c/fields/ROEApi__Event_Duration_Text__c.field-meta.xml
<CustomField>
    <fullName>ROEApi__Event_Duration_Text__c</fullName>
    <description>**System Calculated** Event Duration Text</description>
    <formula>EventApi__Event__r.ROEApi__Event_Duration_Text__c</formula>
    <inlineHelpText>**System Calculated** Event Duration Text</inlineHelpText>
    <label>SYSTEM</label>
    <type>Text</type>
</CustomField>