unpackaged/main/default/objects/EventApi__Ticket_Type__c/listViews/EventApi__All.listView-meta.xml
<ListView>
    <fullName>EventApi__All</fullName>
    <columns>NAME</columns>
    <columns>EventApi__UOM__c</columns>
    <columns>EventApi__Price__c</columns>
    <columns>EventApi__Enable_Early_Bird_Price__c</columns>
    <columns>EventApi__Early_Bird_Price__c</columns>
    <columns>EventApi__Early_Bird_End_Date__c</columns>
    <columns>EventApi__Enable_Onsite_Price__c</columns>
    <columns>EventApi__Onsite_Price__c</columns>
    <columns>EventApi__Display_Available_Inventory__c</columns>
    <columns>EventApi__Quantity_Remaining__c</columns>
    <columns>EventApi__Quantity_Available__c</columns>
    <columns>EventApi__Quantity_Sold__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>